# tabgrounds

./: Procfile  README.md  flake.nix  justfile  openapi.json
backend/: .pre-commit-config.yaml  README.md  pyproject.toml
backend/src/tabgrounds/: challenges.py  game.py  main.py  schemas.py
frontend/: .pre-commit-config.yaml  package.json
frontend/src/: App.tsx
frontend/src/client/: index.ts
frontend/src/client/models/: AdvanceResult.ts  GameStatus.ts
frontend/src/client/services/: DefaultService.ts
frontend/src/components/: AdvanceButton.tsx  GameStatus.tsx
frontend/src/components/ui/: button.tsx
